# wxMASSManager

./: .gitmodules  Application.manifest  CMakeLists.txt  README.md  main.cpp  resource.rc
GUI/: EvtMainFrame.cpp  EvtMainFrame.h  EvtNameChangeDialog.cpp  EvtNameChangeDialog.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  NameChangeDialog.fbp  NameChangeDialog.h
Maps/: LastMissionId.h  StoryProgress.h
Mass/: Mass.cpp  Mass.h
MassBuilderManager/: MassBuilderManager.cpp  MassBuilderManager.h
MassManager/: MassManager.cpp  MassManager.h
Profile/: Locators.h  Profile.cpp  Profile.h
ProfileManager/: ProfileManager.cpp  ProfileManager.h
ScreenshotManager/: ScreenshotManager.cpp  ScreenshotManager.h
src/: CMakeLists.txt  main.cpp  resource.rc
src/GUI/: EvtMainFrame.cpp  EvtMainFrame.h  EvtNameChangeDialog.cpp  EvtNameChangeDialog.h  MainFrame.cpp  MainFrame.h  NameChangeDialog.cpp
src/Maps/: LastMissionId.h  StoryProgress.h
src/Mass/: Mass.cpp  Mass.h
src/MassBuilderManager/: MassBuilderManager.cpp  MassBuilderManager.h
src/MassManager/: MassManager.cpp  MassManager.h
src/Profile/: Locators.h  Profile.cpp
src/ProfileManager/: ProfileManager.cpp  ProfileManager.h
